--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ logging.file=./logs/springboot.log
 #server.port=8090
 spring.datasource.url=jdbc:mysql://localhost:3306/mybaties
 spring.datasource.username=root
-spring.datasource.password=catherine3125
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
