--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mybaties
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
